# tripletex-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  prd.json  progress.txt  pyproject.toml
archive/2026-03-19-tripletex-agent/: prd.json
docs/superpowers/specs/: 2026-03-20-dynamic-focused-prompt-design.md
scripts/ralph/: .last-branch  prd.json  progress.txt
scripts/ralph/archive/2026-03-19-tripletex-agent/: prd.json  progress.txt
src/: agent.py  api_docs.py  config.py  file_processor.py  logging_config.py  main.py  models.py  orchestrator.py  plan_executor.py  plan_generator.py  tripletex_client.py  vertex_auth.py
src/knowledge/: tripletex_api.py
tasks/: prd-agentic-loop.md  prd-tripletex-agent.md
tests/: test_agent.py  test_config.py  test_file_processor.py  test_integration.py  test_logging_config.py  test_main.py  test_multilang.py  test_orchestrator.py  test_plan_executor.py  test_plan_generator.py  test_prompt_validation.py  test_regression.py  test_tripletex_client.py
tests/e2e/: conftest.py  test_create_customer.py  test_create_department.py  test_create_employee.py  test_create_product.py  test_create_project.py  test_create_supplier.py  test_customer_with_address.py  test_employee_with_employment.py  test_full_flow.py  test_full_flow_extended.py
tests/tuning/: CLAUDE.md  conftest.py  mock_client.py  test_fixed_price_project.py  test_invoice_existing_products.py  test_order_invoice_payment.py  test_payment_reversal.py  test_supplier_invoice.py  test_travel_expense.py
